unsuccessfully use redis cache

--- a/api-gateway/openresty/nginx.conf
+++ b/api-gateway/openresty/nginx.conf
@@ -49,5 +49,10 @@ http {
       ';
     }
 
+    location /content_cached {
+      default_type text/html;
+      content_by_lua_file ./scripts/cache.lua;
+    }
+
   }
 }
