--- a/scala/Dockerfile
+++ b/scala/Dockerfile
@@ -1,4 +1,4 @@
-FROM java:8
+FROM openjdk:8
 
 ADD ./bootstrap.sh /opt/
 RUN /opt/bootstrap.sh
@@ -6,4 +6,5 @@ RUN /opt/bootstrap.sh
 ENV SCALA_HOME /opt/scala
 ENV PATH $PATH:$SCALA_HOME/bin
 
-CMD ["scala"]
+# better scala repl
+CMD ["amm"]
