--- a/scala/Dockerfile
+++ b/scala/Dockerfile
@@ -6,5 +6,8 @@ RUN /opt/bootstrap.sh
 ENV SCALA_HOME /opt/scala
 ENV PATH $PATH:$SCALA_HOME/bin
 
+# for finagle or whatever
+EXPOSE 8080
+
 # better scala repl
 CMD ["amm"]
