--- a/api-gateway/kong/docker-compose.yml
+++ b/api-gateway/kong/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 
 services:
 
@@ -9,14 +9,40 @@ services:
     environment:
       - 'POSTGRES_USER=kong'
       - 'POSTGRES_DB=kong'
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  kong-migration:
+    image: 'kong:0.12.1'
+    depends_on:
+      kong-database:
+        condition: service_healthy
+    environment:
+      - KONG_DATABASE=postgres
+      - KONG_PG_HOST=kong-database
+    command: kong migrations up
 
   kong:
-    image: 'kong:0.9.7'
+    image: 'kong:0.12.1'
+    depends_on:
+      kong-database:
+        condition: service_healthy
+      kong-migration:
+        condition: service_started
     volumes:
       - ./replicate-plugin:/usr/local/kong/plugins/replicate-plugin
     environment:
       - 'KONG_DATABASE=postgres'
       - 'KONG_PG_HOST=kong-database'
+      - 'KONG_PG_DATABASE=kong'
+      - 'KONG_ADMIN_LISTEN=0.0.0.0:8001'
+      - 'KONG_PROXY_ACCESS_LOG=/dev/stdout'
+      - 'KONG_ADMIN_ACCESS_LOG=/dev/stdout'
+      - 'KONG_PROXY_ERROR_LOG=/dev/stderr'
+      - 'KONG_ADMIN_ERROR_LOG=/dev/stderr'
     ports:
       - '8000:8000'
       - '8443:8443'
@@ -25,3 +51,7 @@ services:
       - '7946:7946/udp'
     links:
       - 'kong-database:kong-database'
+    healthcheck:
+      test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
+      interval: 5s
+      retries: 10
